# Poison_to_detect

./: .gitignore  README.md  todo.md
ODFL/: pyproject.toml
ODFL/datasets/AGNews/: generation_script.py  load_test.py
ODFL/datasets/CIFAR10/: generation_script.py  load_test.py
ODFL/datasets/DPMedia/: generation_script.py  load_test.py
ODFL/datasets/MNIST/: generation_script.py  load_test.py
ODFL/datasets/PathMNIST/: generation_script.py  load_test.py
ODFL/datasets/TINYIMAGENET/: generation_script.py  load_test.py
ODFL/datasets/Yelp/: generation_script.py  load_test.py
ODFL/odfl/centralised_training/: training_utils.py
ODFL/odfl/dataset_generation/: dataset_generator.py  utils.py
ODFL/odfl/models/: basic_cnn.py  resnet.py
ODFL/simulation_scripts/centralised/: CIFAR10.py  MNIST.py  PATHMNIST.py  TINYIMAGENET.py
