[tool.poetry]
name = "odfl"
version = "0.1.0"
description = ""
authors = ["MKZuziak <maciejzuziak101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = ">= 2.5.0"
torchvision = ">= 0.20.1"
torchaudio = ">= 2.5.1"
matplotlib = ">= 3.10"
pandas = ">= 2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
